--- a/DataCleaning.Rmd
+++ b/DataCleaning.Rmd
@@ -395,6 +395,6 @@ Output the most recent version of Corrections, add date
 #reorder columns
 DATA<- DATA[,c(1,2,3,4,12,5,16,6,7,8,9,10,11,15,13,14)]
 
-write_csv(DATA, "data/RawSalts_Corrected.csv")
+write_csv(DATA, "data/RawSalts_Clean.csv")
 
 ```
