--- a/SaltConversions.Rmd
+++ b/SaltConversions.Rmd
@@ -170,83 +170,211 @@ unique(sort(TDS$SaltUnits))
 
 Conversions to ppm, ion-specific.
 ```{r}
-unique(DATA$Measurement)
 
-IONS <- DATA %>%
-  filter(Measurement %in% c("NaCl", "KCl", "Na2SO4", "MgCl2", "CaCl2", "NaHCO3", "MgSO4", "NaSO4", "CaSO4", "Ca2+","CaCO3", "Cl-", "SO4 2-", "K+", "NO3-", "Mg3+", "Bicarbonate", "K2SO4", "KHCO3", "NH4+", "Na+" ,"NH4Cl", "NaF", "(NH4)2SO4", "NaNO3", "HCO3-", "iron oxide", "NH3+")) 
+#unique(DATA$SaltUnits)
 
-unique(IONS$SaltUnits)
-IONS$`Minimum concentration_ppm` <- NA
-IONS$`Maximum concentration_ppm` <- NA
+DATA$`Minimum concentration_ppm` <- NA
+DATA$`Maximum concentration_ppm` <- NA
 
-##### ppt (is this parts per trillion? or parts per thousand? this could change)
-IONS$`Minimum concentration_ppm`<-ifelse(IONS$SaltUnits== "ppt", 
-                                         IONS$`Minimum concentration_original` * 1000,
-                                         IONS$`Minimum concentration_ppm`)
+##### ppt (parts per thousand)
+DATA$`Minimum concentration_ppm`<-ifelse(DATA$SaltUnits== "ppt", 
+                                         DATA$`Minimum concentration_original` * 1000,
+                                         DATA$`Minimum concentration_ppm`)
 
-IONS$`Maximum concentration_ppm`<-ifelse(IONS$SaltUnits== "ppt", 
-                                         IONS$`Maximum concentration_original` * 1000,
-                                         IONS$`Maximum concentration_ppm`)
+DATA$`Maximum concentration_ppm`<-ifelse(DATA$SaltUnits== "ppt", 
+                                         DATA$`Maximum concentration_original` * 1000,
+                                         DATA$`Maximum concentration_ppm`)
 
 
-##### #g/L
-IONS$`Minimum concentration_ppm`<-ifelse(IONS$SaltUnits== "g/L", 
-                                         IONS$`Minimum concentration_original` * 1000,
-                                         IONS$`Minimum concentration_ppm`)
+##### g/L
+DATA$`Minimum concentration_ppm`<-ifelse(DATA$SaltUnits== "g/L", 
+                                         DATA$`Minimum concentration_original` * 1000,
+                                         DATA$`Minimum concentration_ppm`)
 
-IONS$`Maximum concentration_ppm`<-ifelse(IONS$SaltUnits== "g/L", 
-                                         IONS$`Maximum concentration_original` * 1000,
-                                         IONS$`Maximum concentration_ppm`)
+DATA$`Maximum concentration_ppm`<-ifelse(DATA$SaltUnits== "g/L", 
+                                         DATA$`Maximum concentration_original` * 1000,
+                                         DATA$`Maximum concentration_ppm`)
 
 
 ##### mg/L
-IONS$`Minimum concentration_ppm`<-ifelse(IONS$SaltUnits== "mg/L", 
-                                         IONS$`Minimum concentration_original`, 
-                                         IONS$`Minimum concentration_ppm`)
+DATA$`Minimum concentration_ppm`<-ifelse(DATA$SaltUnits== "mg/L", 
+                                         DATA$`Minimum concentration_original`, 
+                                         DATA$`Minimum concentration_ppm`)
 
-IONS$`Maximum concentration_ppm`<-ifelse(IONS$SaltUnits== "mg/L", 
-                                         IONS$`Maximum concentration_original`, 
-                                         IONS$`Maximum concentration_ppm`)
+DATA$`Maximum concentration_ppm`<-ifelse(DATA$SaltUnits== "mg/L", 
+                                         DATA$`Maximum concentration_original`, 
+                                         DATA$`Maximum concentration_ppm`)
 
 
 ##### ppm
-IONS$`Minimum concentration_ppm`<-ifelse(IONS$SaltUnits== "ppm", 
-                                         IONS$`Minimum concentration_original`, 
-                                         IONS$`Minimum concentration_ppm`)
+DATA$`Minimum concentration_ppm`<-ifelse(DATA$SaltUnits== "ppm", 
+                                         DATA$`Minimum concentration_original`, 
+                                         DATA$`Minimum concentration_ppm`)
 
-IONS$`Maximum concentration_ppm`<-ifelse(IONS$SaltUnits== "ppm", 
-                                         IONS$`Maximum concentration_original`, 
-                                         IONS$`Maximum concentration_ppm`)
+DATA$`Maximum concentration_ppm`<-ifelse(DATA$SaltUnits== "ppm", 
+                                         DATA$`Maximum concentration_original`, 
+                                         DATA$`Maximum concentration_ppm`)
 
 
 ##### ug/L
-IONS$`Minimum concentration_ppm`<-ifelse(IONS$SaltUnits== "µg/L", 
-                                         IONS$`Minimum concentration_original` / 1000,
-                                         IONS$`Minimum concentration_ppm`)
+DATA$`Minimum concentration_ppm`<-ifelse(DATA$SaltUnits== "µg/L", 
+                                         DATA$`Minimum concentration_original` / 1000,
+                                         DATA$`Minimum concentration_ppm`)
 
-IONS$`Maximum concentration_ppm`<-ifelse(IONS$SaltUnits== "µg/L", 
-                                         IONS$`Maximum concentration_original` / 1000,
-                                         IONS$`Maximum concentration_ppm`)
+DATA$`Maximum concentration_ppm`<-ifelse(DATA$SaltUnits== "µg/L", 
+                                         DATA$`Maximum concentration_original` / 1000,
+                                         DATA$`Maximum concentration_ppm`)
 
 
 
 ##### %
-IONS$`Minimum concentration_ppm`<-ifelse(IONS$SaltUnits== "%", 
-                                         IONS$`Minimum concentration_original` * 10000,
-                                         IONS$`Minimum concentration_ppm`)
+DATA$`Minimum concentration_ppm`<-ifelse(DATA$SaltUnits== "%", 
+                                         DATA$`Minimum concentration_original` * 10000,
+                                         DATA$`Minimum concentration_ppm`)
 
-IONS$`Maximum concentration_ppm`<-ifelse(IONS$SaltUnits== "%", 
-                                         IONS$`Maximum concentration_original` * 10000,
-                                         IONS$`Maximum concentration_ppm`)
-
-
-mmol <- DATA %>%
-  filter(SaltUnits %in% c("mmol/L")) 
+DATA$`Maximum concentration_ppm`<-ifelse(DATA$SaltUnits== "%", 
+                                         DATA$`Maximum concentration_original` * 10000,
+                                         DATA$`Maximum concentration_ppm`)
 
 
 
+##### µmol/L & µM/L
 
-#Check for stragglers (no new data). Likely a name that needs to be fixed in 'DataCleaning' and then added above to conversions. 
+#NH4+
+DATA$`Minimum concentration_ppm`<-ifelse(DATA$SaltUnits== "µM/L" & DATA$Measurement== "NH4+", 
+                                         DATA$`Minimum concentration_original` / 1000000 * 1000 * 18.04,
+                                         DATA$`Minimum concentration_ppm`)
+
+DATA$`Maximum concentration_ppm`<-ifelse(DATA$SaltUnits== "µM/L" & DATA$Measurement== "NH4+", 
+                                         DATA$`Maximum concentration_original` / 1000000 * 1000 * 18.04,
+                                         DATA$`Maximum concentration_ppm`)
+
+
+#Ca2+
+DATA$`Minimum concentration_ppm`<-ifelse(DATA$SaltUnits %in% c("µmol/L", "µM/L") & DATA$Measurement== "Ca2+", 
+                                         DATA$`Minimum concentration_original` / 1000000 * 1000 * 40.08,
+                                         DATA$`Minimum concentration_ppm`)
+
+DATA$`Maximum concentration_ppm`<-ifelse(DATA$SaltUnits %in% c("µmol/L", "µM/L") & DATA$Measurement== "Ca2+", 
+                                         DATA$`Maximum concentration_original` / 1000000 * 1000 * 40.08,
+                                         DATA$`Maximum concentration_ppm`)
+
+
+#HCO3-
+DATA$`Minimum concentration_ppm`<-ifelse(DATA$SaltUnits== "µmol/L" & DATA$Measurement== "HCO3-", 
+                                         DATA$`Minimum concentration_original` / 1000000 * 1000 * 61.02,
+                                         DATA$`Minimum concentration_ppm`)
+
+DATA$`Maximum concentration_ppm`<-ifelse(DATA$SaltUnits== "µmol/L" & DATA$Measurement== "HCO3-", 
+                                         DATA$`Maximum concentration_original` / 1000000 * 1000 * 61.02,
+                                         DATA$`Maximum concentration_ppm`)
+
+
+#K+
+DATA$`Minimum concentration_ppm`<-ifelse(DATA$SaltUnits== "µM/L" & DATA$Measurement== "K+", 
+                                         DATA$`Minimum concentration_original` / 1000000 * 1000 * 39.09,
+                                         DATA$`Minimum concentration_ppm`)
+
+DATA$`Maximum concentration_ppm`<-ifelse(DATA$SaltUnits== "µM/L" & DATA$Measurement== "K+", 
+                                         DATA$`Maximum concentration_original` / 1000000 * 1000 * 39.09,
+                                         DATA$`Maximum concentration_ppm`)
+
+#Mg3+
+DATA$`Minimum concentration_ppm`<-ifelse(DATA$SaltUnits== "µM/L" & DATA$Measurement== "Mg3+", 
+                                         DATA$`Minimum concentration_original` / 1000000 * 1000 * 24.31,
+                                         DATA$`Minimum concentration_ppm`)
+
+DATA$`Maximum concentration_ppm`<-ifelse(DATA$SaltUnits== "µM/L" & DATA$Measurement== "Mg3+", 
+                                         DATA$`Maximum concentration_original` / 1000000 * 1000 * 24.31,
+                                         DATA$`Maximum concentration_ppm`)
+
+
+#Na+
+DATA$`Minimum concentration_ppm`<-ifelse(DATA$SaltUnits== "µM/L" & DATA$Measurement== "Na+", 
+                                         DATA$`Minimum concentration_original` / 1000000 * 1000 * 22.99,
+                                         DATA$`Minimum concentration_ppm`)
+
+DATA$`Maximum concentration_ppm`<-ifelse(DATA$SaltUnits== "µM/L" & DATA$Measurement== "Na+", 
+                                         DATA$`Maximum concentration_original` / 1000000 * 1000 * 22.99,
+                                         DATA$`Maximum concentration_ppm`)
+
+
+
+
+#mmol/L
+#NaCl
+DATA$`Minimum concentration_ppm`<-ifelse(DATA$SaltUnits== "mmol/L" & DATA$Measurement== "NaCl", 
+                                         DATA$`Minimum concentration_original` / 1000 * 1000 * 58.44,
+                                         DATA$`Minimum concentration_ppm`)
+
+DATA$`Maximum concentration_ppm`<-ifelse(DATA$SaltUnits== "mmol/L" & DATA$Measurement== "NaCl", 
+                                         DATA$`Maximum concentration_original` / 1000 * 1000 * 58.44,
+                                         DATA$`Maximum concentration_ppm`)
+
+
+
+#Ca2+
+DATA$`Minimum concentration_ppm`<-ifelse(DATA$SaltUnits== "mmol/L" & DATA$Measurement== "Ca2+", 
+                                         DATA$`Minimum concentration_original` / 1000 * 1000 * 40.08,
+                                         DATA$`Minimum concentration_ppm`)
+
+DATA$`Maximum concentration_ppm`<-ifelse(DATA$SaltUnits== "mmol/L" & DATA$Measurement== "Ca2+", 
+                                         DATA$`Maximum concentration_original` / 1000 * 1000 * 40.08,
+                                         DATA$`Maximum concentration_ppm`)
+
+
+
+#K+
+DATA$`Minimum concentration_ppm`<-ifelse(DATA$SaltUnits== "mmol/L" & DATA$Measurement== "K+", 
+                                         DATA$`Minimum concentration_original` / 1000 * 1000 * 39.09,
+                                         DATA$`Minimum concentration_ppm`)
+
+DATA$`Maximum concentration_ppm`<-ifelse(DATA$SaltUnits== "mmol/L" & DATA$Measurement== "K+", 
+                                         DATA$`Maximum concentration_original` / 1000 * 1000 * 39.09,
+                                         DATA$`Maximum concentration_ppm`)
+
+
+
+#Mg3+
+DATA$`Minimum concentration_ppm`<-ifelse(DATA$SaltUnits== "mmol/L" & DATA$Measurement== "Mg3+", 
+                                         DATA$`Minimum concentration_original` / 1000 * 1000 * 24.31,
+                                         DATA$`Minimum concentration_ppm`)
+
+DATA$`Maximum concentration_ppm`<-ifelse(DATA$SaltUnits== "mmol/L" & DATA$Measurement== "Mg3+", 
+                                         DATA$`Maximum concentration_original` / 1000 * 1000 * 24.31,
+                                         DATA$`Maximum concentration_ppm`)
+
+
+#Na+
+DATA$`Minimum concentration_ppm`<-ifelse(DATA$SaltUnits== "mmol/L" & DATA$Measurement== "Na+", 
+                                         DATA$`Minimum concentration_original` / 1000 * 1000 * 22.99,
+                                         DATA$`Minimum concentration_ppm`)
+
+DATA$`Maximum concentration_ppm`<-ifelse(DATA$SaltUnits== "mmol/L" & DATA$Measurement== "Na+", 
+                                         DATA$`Maximum concentration_original` / 1000 * 1000 * 22.99,
+                                         DATA$`Maximum concentration_ppm`)
+
+
+
+#Cl-
+DATA$`Minimum concentration_ppm`<-ifelse(DATA$SaltUnits== "mmol/L" & DATA$Measurement== "Cl-", 
+                                         DATA$`Minimum concentration_original` / 1000 * 1000 * 35.45,
+                                         DATA$`Minimum concentration_ppm`)
+
+DATA$`Maximum concentration_ppm`<-ifelse(DATA$SaltUnits== "mmol/L" & DATA$Measurement== "Cl-", 
+                                         DATA$`Maximum concentration_original` / 1000 * 1000 * 35.45,
+                                         DATA$`Maximum concentration_ppm`)
+
+
+
+
+#unique(DATA$SaltUnits)
+#sub<-subset(DATA, Measurement == "NaCl" & SaltUnits== "mmol/L")
+sub1<-subset(DATA, SaltUnits== "µmol/L")
+sub2<-subset(DATA, SaltUnits== "µM/L")
+
+
+#Check for stragglers (no new data). Likely a name that needs to be fixed in 'DataCleaning' and then added above to conversDATA. 
 
 ```
 
